Add search by GPS, cleanup
