# ruian-api.rb
@@ -25,8 +25,29 @@ class RuianAPI < Sinatra::Base
             city_part_name as city_part,
             city_name as city,
             zip as zip,
+            lat as lat,
+            long as long,
             address as address
-    FROM view_address_search WHERE address_search LIKE '#{query}' limit #{limit}").map(&:to_h)
+    FROM view_address_search WHERE address_search LIKE '#{query}' LIMIT #{limit}").map(&:to_h)
+  end
+
+  def place_by_coordinates(lat, long, limit=10, range=50)
+    result = postgres.exec( "SELECT
+            id,
+            street_name as street,
+            p as p,
+            o as o,
+            e as e,
+            city_part_name as city_part,
+            city_name as city,
+            zip as zip,
+            lat as lat,
+            long as long,
+            address as address,
+            earth_distance( ll_to_earth(lat, long), ll_to_earth(#{lat}, #{long})) as distance
+      FROM view_address_search
+      WHERE earth_box(ll_to_earth(#{lat}, #{long}), #{range}) @> ll_to_earth(lat, long)
+      ORDER BY 12 LIMIT #{limit}").map(&:to_h)
   end
 
   def record_expire
@@ -40,9 +61,18 @@ class RuianAPI < Sinatra::Base
     I18n.locale = :cs
 
     query = '%' + I18n.transliterate(params[:search]).to_s.downcase.gsub(/[^a-z0-9]/,' ').gsub(/\s+/, '%') + '%'
-    limit = params[:limit].to_i || 30
+    limit = params[:limit].to_i || 10
 
     return places_search_query(query, limit).to_json
+  end
+
+  get '/location' do
+    lat = params[:lat]
+    long = params[:long]
+    limit = params[:limit].to_i || 10
+    range = params[:range].to_i || 50
+
+    return place_by_coordinates(lat, long, limit, range).to_json
   end
 
   get '/openapi.yml' do
